2007-01-10  Alp Toker  <alp@atoker.com>

	* src/Global.cs: Remove GC.SuppressFinalize() hack left over from
	old dbus-sharp use.

2007-01-09  Peter Johanson  <peter@peterjohanson.com>

	* Makefile.am:
	
	Add new deps dir to the build list.

	* PluginLib/Makefile.am: 
	* configure.in:

	Remove reference to old dbus-sharp.

	* data/muine-dbus.pc.in:
	* data/muine-plugin.pc.in:

	Move all the muine libs into $(libdir)/muine instead of the GAC.

	* deps/Makefile.am:

	New automake file to build both dbus-sharp and dbus-sharp-glib imports.

	* deps/dbus-sharp/*:
	
	Import of dbus-sharp from git.ndesk.org

	* deps/dbus-sharp-glib/*:
	
	Import of dbus-sharp-glib from git.ndesk.org

	* DBusLib/AssemblyInfo.cs:
	* DBusLib/IPlayer.cs:
	* DBusLib/Makefile.am:
	* DBusLib/Player.cs:
	* src/DBusService.cs:
	* src/Global.cs:
	* src/Makefile.am: 

	Ported to work with new import copy of the NDesk dbus-sharp library.

2006-12-14  Pema Geyleg  <pgeyleg@gmail.com>

	* configure.in: Added 'dz' to ALL_LINGUAS

2006-12-08  Luis Medinas  <metalgod@gentoo.org>

	* libmuine/metadata.c: (metadata_load):

	Added support for audio/mp4. Patch from Iain <iain@gnome.org>

2006-11-13  Wouter Bolsterlee  <wbolster@cvs.gnome.org>

	* plugins/Makefile.am:
	* plugins/NotificationArea.cs:
	* plugins/TrayIcon.cs:

	Ported (copy/pasted) trayicon code from Banshee. It
	seems newer and contains the previous muine-specific
	patches to the trayicon code. Amongst possible other
	things, this makes the muine trayicon transparent. Fixes
	bug #343698.

2006-11-10  Peter Johanson  <peter@peterjohanson.com>

	* NEWS: Add item about new Latvian translation.
	* configure.in: Bump to 0.8.6 for  a release.

2006-11-08  Wouter Bolsterlee  <wbolster@cvs.gnome.org>

	* AUTHORS: Updated with some new names.

2006-11-07  Wouter Bolsterlee  <wbolster@cvs.gnome.org>

	* NEWS: Wrote 0.8.6 release notes.

2006-11-05  Wouter Bolsterlee  <wbolster@cvs.gnome.org>

	Let's Tango!

	* data/images/muine-16.png: